Changelog
=========

5.2-dev - (unreleased)
----------------------
* Bug fix: also register the geo namespace, for pretty printing
  [tiberich refs #3425]

5.1 - (2012-07-17)
------------------
* Bug fix: only provide rdf view for real archetypes content, FTI and portal
  tools
  [tiberich refs #5301]

5.0 - (2012-07-16)
------------------
* Bug fix: also handle UnicodeDecodeError in when trying to convert text
  using chardet.detect 
  [tiberich refs #5308]

4.9 - (2012-07-13)
------------------
* Bug fix: avoid unicode decode errors in @@rdf 
  [tiberich refs #5308]

4.8 - (2012-06-20)
------------------
* Bug fix: hasTranslations must also be an rdf:resource (not a literal value) 
  in coherence with the isTranslationOf and other dcterms relations.
  [demarant refs #5130]
* Bug fix: fixed hasTranslation recursive relation to itself.
  [demarant refs #5130]
* Bug fix: blacklisted nextPreviousEnabled and excludeFromNav
  [tiberich refs #5130]

4.7 - (2012-06-12)
------------------
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]
* WIP: added eea:isTranslationOf to point to translations 
  [tiberich #5130]
* Bug fix: use dcterms:issued instead of dcterms:effective for DC
  [tiberich #5135]
* Feature: use a mechanism of subscribers to allow modification of the surf
  resource by package plugins 
  [tiberich #5129]
* Bug fix: fix @@rdf view for mimetypes_registry 
  [tiberich #5206]

4.6 - (2012-03-30)
------------------
* Empty release

4.5 - (2012-02-15)
------------------
* Bug fix: fixed tests 
  [tiberich]

4.4 - (2012-02-10)
------------------
* Bug fix: fixed a problem with related fields that are empty
  [tiberich #4942]

4.3 - (2012-02-02)
------------------
* Bug fix: fixed a problem inserting related items in rdf stream when relation field is single value
  [tiberich #4992]

4.2 - (2011-12-07)
------------------
* Bug fix: Unindex temporary objects created in portal_factory
  [voineali #4822]

4.1 - (2011-11-18)
------------------